Changed @import url("common/mrs_screen.css"); to @import url("common/mrs_screen.css") screen; and fixed text-align

--- a/web/common/mrs_print.css
+++ b/web/common/mrs_print.css
@@ -6,6 +6,7 @@ body {
   background-color: rgb(255,255,255);
   font: 10pt Arial, Helvetica, sans-serif;
   line-height: 14pt;
+  text-align: justify;
   color: rgb(5,5,5);
 }
 
@@ -25,29 +26,27 @@ body {
 
 #mainContent {
   width: 100%;
-  text-align: left;
 }
 
 #mainContent ul {
   list-style: disc;
 }
 
-
 /* Links
 --------------------------------------------------------------------*/
 
-a:link, a:visited {
+#mainContent a:link, #mainContent a:visited {
   text-decoration: none;
   border: none;
   color: rgb(5,5,5);
 }
 
-a[href^='']:after {
+#mainContent a[href^='']:after {
   content: ' (' attr(href) ') ';
   font-size: 8pt;
 }
 
-a img {
+#mainContent a img {
   filter: alpha(opacity=100);
   filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
   -moz-opacity: 1.00;
